message PlayerLocalDataVO {
	required string machineId 			=1;
}